2006-12-14  Brian Bidulock  <bidulock@openss7.org>

	- debian script corrections from Michael Fig <fig@marketsystems.com>

	* debian/mscript_postinst.in: debian script corrections
	* debian/mscript_postrm.in: debian script corrections
	* debian/mscript_preinst.in: debian script corrections
	* debian/rules.in: debian script corrections
	* debian/strbcm-devel.preinst.in: debian script corrections

2006-10-30  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: added ability to sync between test cases

2006-10-21  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strbcm.refs: updated streams release number
	* debian/control.in: updated LiS release number
	* doc/manual/releases.texi: updated LiS release number

2006-10-12  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: removed redundant debug flags
	* src/include/sys/strbcm/config.h.in: removed redundant debug flags

2006-10-10  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/man/strbcm.refs: updates for release
	* doc/man/man5/strbcm.5.man: updates for release
	* doc/manual/descrip.texi: updates for release

2006-10-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man5/strbcm.5.man: updated for make check

2006-10-05  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/manual/descrip.texi: updates for release
	* doc/manual/news.texi: updates for release

2006-10-03  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/Makefile.am: rename manual pages
	* doc/manual/descrip.texi: updated release notes
	* doc/manual/news.texi: updated release notes
	* doc/manual/todo.texi: updated release notes
	* lib32/Makefile.am: remove AUTOCONFIG_H
	* Makefile.am: remove AUTOCONFIG_H
	* pkg/Config: remove redundant entries
	* src/include/Makefile.am: parameterize